#288 feat: Update PDF upload and api
